--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/ejs": "^3.0.4",
     "@types/node": "^13.13.15",
     "ejs": "^3.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ping-wrapper": "0.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.7"
