--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/node": "^13.13.15",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "ping-wrapper": "0.0.3"
+    "ping-wrapper": "0.0.3",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.7"
