DARP Protocol with matrix and basic data graphs +

--- a/Dockerfile.bad
+++ b/Dockerfile.bad
@@ -2,8 +2,7 @@
 # Dockerfile for DARP - eventually add in popular open source network i
 #	diagnostics and debugging tools
 #
-#FROM ubuntu:18.04 as base
-FROM alpine:3.7 as base
+FROM ubuntu:18.04 as base
 
 RUN apt-get update -yq  && \ 
     apt-get install -yq wireguard wireguard-tools curl wget git npm inetutils-traceroute iproute2 traceroute && \
