--- a/genesisnodes.config
+++ b/genesisnodes.config
@@ -1,4 +1,3 @@
 52.53.222.151,65013,AWS-US-WEST-1
 52.47.163.136,65013,AWS-EU-WEST-3
-18.181.19.149,65013,AWS-AP-NORTHEAST-1
-
+18.181.19.149,65013,AWS-AP-NORTHEAST-1B
