--- a/membernodes.config
+++ b/membernodes.config
@@ -1,8 +1,11 @@
-#104.209.36.75,65013,MAZ-WESTUS
+# trying a few
 52.149.153.11,65013,MAZ-EASTUS
-#94.245.92.209,65013,MAZ-NORTHEUROPE
-#168.63.204.90,65013,MAZ-EASTASIA
+54.79.238.234,65013,AWS-AP-SOUTHEAST-2
+168.63.204.90,65013,MAZ-EASTASIA
+#
 #13.76.196.133,65013,MAZ-SOUTHEASTASIA
+#104.209.36.75,65013,MAZ-WESTUS
+#94.245.92.209,65013,MAZ-NORTHEUROPE
 #52.162.102.91,65013,MAZ-NORTHCENTRALUS
 #13.65.169.75,65013,MAZ-SOUTHCENTRALUS
 #40.113.204.173,65013,MAZ-CENTRALUS
@@ -37,5 +40,4 @@
 #35.183.12.252,65013,AWS-CA-CENTRAL-1
 #52.10.8.19,65013,AWS-US-WEST-2
 #54.169.196.101,65013,AWS-AP-SOUTHEAST-1
-#54.79.238.234,65013,AWS-AP-SOUTHEAST-2
 #
