--- a/membernodes.config
+++ b/membernodes.config
@@ -1,43 +1,49 @@
-# trying a few
-52.149.153.11,65013,MAZ-EASTUS
 54.79.238.234,65013,AWS-AP-SOUTHEAST-2
+54.169.196.101,65013,AWS-AP-SOUTHEAST-1
+52.231.198.62,65013,MAZ-KOREASOUTH
+52.189.219.2,65013,MAZ-AUSTRALIASOUTHEAST
+18.162.246.217,65013,AWS-AP-EAST-1
 168.63.204.90,65013,MAZ-EASTASIA
+13.78.33.212,65013,MAZ-JAPANEAST
+13.76.196.133,65013,MAZ-SOUTHEASTASIA
+13.75.168.56,65013,MAZ-AUSTRALIAEAST
+13.233.206.71,65013,AWS-AP-SOUTH-1
+20.194.5.92,65013,MAZ-KOREACENTRAL
+52.172.162.255,65013,MAZ-CENTRALINDIA
+104.211.212.52,65013,MAZ-SOUTHINDIA
 #
-#13.76.196.133,65013,MAZ-SOUTHEASTASIA
-#104.209.36.75,65013,MAZ-WESTUS
+#
+#
 #94.245.92.209,65013,MAZ-NORTHEUROPE
-#52.162.102.91,65013,MAZ-NORTHCENTRALUS
-#13.65.169.75,65013,MAZ-SOUTHCENTRALUS
-#40.113.204.173,65013,MAZ-CENTRALUS
-#20.57.114.229,65013,MAZ-EASTUS2
-#13.78.33.212,65013,MAZ-JAPANEAST
-#191.232.182.165,65013,MAZ-BRAZILSOUTH
-#13.75.168.56,65013,MAZ-AUSTRALIAEAST
-#52.189.219.2,65013,MAZ-AUSTRALIASOUTHEAST
-#52.172.162.255,65013,MAZ-CENTRALINDIA
-#104.211.212.52,65013,MAZ-SOUTHINDIA
-#52.138.16.107,65013,MAZ-CANADACENTRAL
 #52.183.5.213,65013,MAZ-WESTUS2
-#51.132.240.209,65013,MAZ-UKSOUTH
-#20.194.5.92,65013,MAZ-KOREACENTRAL
-#52.231.198.62,65013,MAZ-KOREASOUTH
-#51.11.244.133,65013,MAZ-FRANCECENTRAL
-#40.123.249.176,65013,MAZ-SOUTHAFRICANORTH
-#20.196.3.17,65013,MAZ-UAENORTH
-#51.103.143.0,65013,MAZ-SWITZERLANDNORTH
-#20.52.232.60,65013,MAZ-GERMANYWESTCENTRAL
-#100.25.119.250,65013,AWS-US-EAST-1
-#13.233.206.71,65013,AWS-AP-SOUTH-1
-#13.244.171.67,65013,AWS-AF-SOUTH-1
-#13.48.248.208,65013,AWS-EU-NORTH-1
-#15.161.177.233,65013,AWS-EU-SOUTH-1
-#157.175.50.253,65013,AWS-ME-SOUTH-1
-#18.162.246.217,65013,AWS-AP-EAST-1
-#18.197.63.199,65013,AWS-EU-CENTRAL-1
-#18.228.119.86,65013,AWS-SA-EAST-1
-#3.121.201.31,65013,AWS-EU-CENTRAL-1
-#3.14.252.232,65013,AWS-US-EAST-2
-#35.183.12.252,65013,AWS-CA-CENTRAL-1
+#52.162.102.91,65013,MAZ-NORTHCENTRALUS
+#52.149.153.11,65013,MAZ-EASTUS
+#52.138.16.107,65013,MAZ-CANADACENTRAL
 #52.10.8.19,65013,AWS-US-WEST-2
-#54.169.196.101,65013,AWS-AP-SOUTHEAST-1
+#51.132.240.209,65013,MAZ-UKSOUTH
+#51.11.244.133,65013,MAZ-FRANCECENTRAL
+#51.103.143.0,65013,MAZ-SWITZERLANDNORTH
+#40.123.249.176,65013,MAZ-SOUTHAFRICANORTH
+#40.113.204.173,65013,MAZ-CENTRALUS
+#35.183.12.252,65013,AWS-CA-CENTRAL-1
+#3.14.252.232,65013,AWS-US-EAST-2
+#3.121.201.31,65013,AWS-EU-CENTRAL-1
+#20.57.114.229,65013,MAZ-EASTUS2
+#20.52.232.60,65013,MAZ-GERMANYWESTCENTRAL
+#20.196.3.17,65013,MAZ-UAENORTH
+#191.232.182.165,65013,MAZ-BRAZILSOUTH
+#18.228.119.86,65013,AWS-SA-EAST-1
+#18.197.63.199,65013,AWS-EU-CENTRAL-1
+#157.175.50.253,65013,AWS-ME-SOUTH-1
+#15.161.177.233,65013,AWS-EU-SOUTH-1
+#13.65.169.75,65013,MAZ-SOUTHCENTRALUS
+#13.48.248.208,65013,AWS-EU-NORTH-1
+#13.244.171.67,65013,AWS-AF-SOUTH-1
+#104.209.36.75,65013,MAZ-WESTUS
+#100.25.119.250,65013,AWS-US-EAST-1
+# trying a few
+#
+#
+#
+#
 #
