--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -1,6 +1,9 @@
 #
 # genesisnodelist.config - this file can be auto-generated or curated
-#   contains list of startable nodes and their starting role as G or not
+#
+#   contains list of public genesis nodes for propgating public keys and
+#	optimizing network paths via relays 
+#
 #    format: IPaddress,Port#,geo,type
 #
 52.53.222.151,65013,AWS-US-WEST-1,GENESIS
