--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -1,8 +1,9 @@
 #
 # genesisnodelist.config - this file can be auto-generated or curated
 #
-#   contains list of public genesis nodes for propgating public keys and
-#	optimizing network paths via relays 
+#   contains list of currently publicly available genesis relay nodes 
+#       useful for propgating public encryption keys and
+#	enabling network route via relaya where helpful 
 #
 #    format: IPaddress,Port#,geo,type
 #
