--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -11,44 +11,44 @@
 52.47.163.136,65013,AWS-EU-WEST-3,GENESIS
 18.181.19.149,65013,AWS-AP-NORTHEAST-1B,GENESIS
 
-54.79.238.234,65013,AWS-AP-SOUTHEAST-2,MEMBER
-54.169.196.101,65013,AWS-AP-SOUTHEAST-1,MEMBER
-52.231.198.62,65013,MAZ-KOREASOUTH,MEMBER
-52.189.219.2,65013,MAZ-AUSTRALIASOUTHEAST,MEMBER
-18.162.246.217,65013,AWS-AP-EAST-1,MEMBER
-168.63.204.90,65013,MAZ-EASTASIA,MEMBER
-13.78.33.212,65013,MAZ-JAPANEAST,MEMBER
-13.76.196.133,65013,MAZ-SOUTHEASTASIA,MEMBER
-13.75.168.56,65013,MAZ-AUSTRALIAEAST,MEMBER
-13.233.206.71,65013,AWS-AP-SOUTH-1,MEMBER
-20.194.5.92,65013,MAZ-KOREACENTRAL,MEMBER
-52.172.162.255,65013,MAZ-CENTRALINDIA,MEMBER
-104.211.212.52,65013,MAZ-SOUTHINDIA,MEMBER
+54.79.238.234,65013,AWS-AP-SOUTHEAST-2,GENESIS
+54.169.196.101,65013,AWS-AP-SOUTHEAST-1,GENESIS
+52.231.198.62,65013,MAZ-KOREASOUTH,GENESIS
+52.189.219.2,65013,MAZ-AUSTRALIASOUTHEAST,GENESIS
+18.162.246.217,65013,AWS-AP-EAST-1,GENESIS
+168.63.204.90,65013,MAZ-EASTASIA,GENESIS
+13.78.33.212,65013,MAZ-JAPANEAST,GENESIS
+13.76.196.133,65013,MAZ-SOUTHEASTASIA,GENESIS
+13.75.168.56,65013,MAZ-AUSTRALIAEAST,GENESIS
+13.233.206.71,65013,AWS-AP-SOUTH-1,GENESIS
+20.194.5.92,65013,MAZ-KOREACENTRAL,GENESIS
+52.172.162.255,65013,MAZ-CENTRALINDIA,GENESIS
+104.211.212.52,65013,MAZ-SOUTHINDIA,GENESIS
 
-94.245.92.209,65013,MAZ-NORTHEUROPE,MEMBER
-52.183.5.213,65013,MAZ-WESTUS2,MEMBER
-52.162.102.91,65013,MAZ-NORTHCENTRALUS,MEMBER
-52.149.153.11,65013,MAZ-EASTUS,MEMBER
-52.138.16.107,65013,MAZ-CANADACENTRAL,MEMBER
-52.10.8.19,65013,AWS-US-WEST-2,MEMBER
-51.132.240.209,65013,MAZ-UKSOUTH,MEMBER
-51.11.244.133,65013,MAZ-FRANCECENTRAL,MEMBER
-51.103.143.0,65013,MAZ-SWITZERLANDNORTH,MEMBER
-40.123.249.176,65013,MAZ-SOUTHAFRICANORTH,MEMBER
-40.113.204.173,65013,MAZ-CENTRALUS,MEMBER
-35.183.12.252,65013,AWS-CA-CENTRAL-1,MEMBER
-3.14.252.232,65013,AWS-US-EAST-2,MEMBER
-3.121.201.31,65013,AWS-EU-CENTRAL-1,MEMBER
-20.57.114.229,65013,MAZ-EASTUS2,MEMBER
-20.52.232.60,65013,MAZ-GERMANYWESTCENTRAL,MEMBER
-20.196.3.17,65013,MAZ-UAENORTH,MEMBER
-191.232.182.165,65013,MAZ-BRAZILSOUTH,MEMBER
-18.228.119.86,65013,AWS-SA-EAST-1,MEMBER
-18.197.63.199,65013,AWS-EU-CENTRAL-1,MEMBER
-157.175.50.253,65013,AWS-ME-SOUTH-1,MEMBER
-15.161.177.233,65013,AWS-EU-SOUTH-1,MEMBER
-13.65.169.75,65013,MAZ-SOUTHCENTRALUS,MEMBER
-13.48.248.208,65013,AWS-EU-NORTH-1,MEMBER
-13.244.171.67,65013,AWS-AF-SOUTH-1,MEMBER
-104.209.36.75,65013,MAZ-WESTUS,MEMBER
-100.25.119.250,65013,AWS-US-EAST-1,MEMBER
+94.245.92.209,65013,MAZ-NORTHEUROPE,GENESIS
+52.183.5.213,65013,MAZ-WESTUS2,GENESIS
+52.162.102.91,65013,MAZ-NORTHCENTRALUS,GENESIS
+52.149.153.11,65013,MAZ-EASTUS,GENESIS
+52.138.16.107,65013,MAZ-CANADACENTRAL,GENESIS
+52.10.8.19,65013,AWS-US-WEST-2,GENESIS
+51.132.240.209,65013,MAZ-UKSOUTH,GENESIS
+51.11.244.133,65013,MAZ-FRANCECENTRAL,GENESIS
+51.103.143.0,65013,MAZ-SWITZERLANDNORTH,GENESIS
+40.123.249.176,65013,MAZ-SOUTHAFRICANORTH,GENESIS
+40.113.204.173,65013,MAZ-CENTRALUS,GENESIS
+35.183.12.252,65013,AWS-CA-CENTRAL-1,GENESIS
+3.14.252.232,65013,AWS-US-EAST-2,GENESIS
+3.121.201.31,65013,AWS-EU-CENTRAL-1,GENESIS
+20.57.114.229,65013,MAZ-EASTUS2,GENESIS
+20.52.232.60,65013,MAZ-GERMANYWESTCENTRAL,GENESIS
+20.196.3.17,65013,MAZ-UAENORTH,GENESIS
+191.232.182.165,65013,MAZ-BRAZILSOUTH,GENESIS
+18.228.119.86,65013,AWS-SA-EAST-1,GENESIS
+18.197.63.199,65013,AWS-EU-CENTRAL-1,GENESIS
+157.175.50.253,65013,AWS-ME-SOUTH-1,GENESIS
+15.161.177.233,65013,AWS-EU-SOUTH-1,GENESIS
+13.65.169.75,65013,MAZ-SOUTHCENTRALUS,GENESIS
+13.48.248.208,65013,AWS-EU-NORTH-1,GENESIS
+13.244.171.67,65013,AWS-AF-SOUTH-1,GENESIS
+104.209.36.75,65013,MAZ-WESTUS,GENESIS
+100.25.119.250,65013,AWS-US-EAST-1,GENESIS
