--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -39,16 +39,30 @@
 35.183.12.252,65013,AWS-CA-CENTRAL-1,MEMBER
 3.14.252.232,65013,AWS-US-EAST-2,MEMBER
 3.121.201.31,65013,AWS-EU-CENTRAL-1,MEMBER
-20.57.114.229,65013,MAZ-EASTUS2,MEMBER
-20.52.232.60,65013,MAZ-GERMANYWESTCENTRAL,MEMBER
-20.196.3.17,65013,MAZ-UAENORTH,MEMBER
-191.232.182.165,65013,MAZ-BRAZILSOUTH,MEMBER
-18.228.119.86,65013,AWS-SA-EAST-1,MEMBER
-18.197.63.199,65013,AWS-EU-CENTRAL-1,MEMBER
-157.175.50.253,65013,AWS-ME-SOUTH-1,MEMBER
-15.161.177.233,65013,AWS-EU-SOUTH-1,MEMBER
-13.65.169.75,65013,MAZ-SOUTHCENTRALUS,MEMBER
-13.48.248.208,65013,AWS-EU-NORTH-1,MEMBER
-13.244.171.67,65013,AWS-AF-SOUTH-1,MEMBER
-104.209.36.75,65013,MAZ-WESTUS,MEMBER
-100.25.119.250,65013,AWS-US-EAST-1,MEMBER
+
+13.75.168.56,65013,MAZ-AUSTRALIAEAST-00,MEMBER
+52.189.219.2,65013,MAZ-AUSTRALIASOUTHEAST-00,MEMBER
+191.232.182.165,65013,MAZ-BRAZILSOUTH-00,MEMBER
+52.138.16.107,65013,MAZ-CANADACENTRAL-00,MEMBER
+52.172.162.255,65013,MAZ-CENTRALINDIA-00,MEMBER
+40.113.204.173,65013,MAZ-CENTRALUS-00,MEMBER
+168.63.204.90,65013,MAZ-EASTASIA-00,MEMBER
+52.149.153.11,65013,MAZ-EASTUS-00,MEMBER
+20.57.114.229,65013,MAZ-EASTUS2-00,MEMBER
+51.11.244.133,65013,MAZ-FRANCECENTRAL-00,MEMBER
+20.52.232.60,65013,MAZ-GERMANYWESTCENTRAL-00,MEMBER
+13.78.33.212,65013,MAZ-JAPANEAST-00,MEMBER
+20.194.5.92,65013,MAZ-KOREACENTRAL-00,MEMBER
+52.231.198.62,65013,MAZ-KOREASOUTH-00,MEMBER
+52.162.102.91,65013,MAZ-NORTHCENTRALUS-00,MEMBER
+94.245.92.209,65013,MAZ-NORTHEUROPE-00,MEMBER
+40.123.249.176,65013,MAZ-SOUTHAFRICANORTH-00,MEMBER
+13.65.169.75,65013,MAZ-SOUTHCENTRALUS-00,MEMBER
+13.76.196.133,65013,MAZ-SOUTHEASTASIA-00,MEMBER
+104.211.212.52,65013,MAZ-SOUTHINDIA-00,MEMBER
+51.103.143.0,65013,MAZ-SWITZERLANDNORTH-00,MEMBER
+20.196.3.17,65013,MAZ-UAENORTH-00,MEMBER
+51.132.240.209,65013,MAZ-UKSOUTH-00,MEMBER
+104.209.36.75,65013,MAZ-WESTUS-00,MEMBER
+52.183.5.213,65013,MAZ-WESTUS2-00,MEMBER
+
