--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -8,8 +8,8 @@
 #    format: IPaddress,Port#,geo,type
 #
 52.53.222.151,65013,AWS-US-WEST-1,GENESIS
-52.47.163.136,65013,AWS-EU-WEST-3,GENESIS
-18.181.19.149,65013,AWS-AP-NORTHEAST-1B,GENESIS
+52.47.163.136,65013,AWS-EU-WEST-3,MEMBER
+18.181.19.149,65013,AWS-AP-NORTHEAST-1B,MEMBER
 
 54.79.238.234,65013,AWS-AP-SOUTHEAST-2,MEMBER
 54.169.196.101,65013,AWS-AP-SOUTHEAST-1,MEMBER
