--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -38,6 +38,7 @@
 40.123.249.176,65013,MAZ-SOUTHAFRICANORTH,MEMBER
 40.113.204.173,65013,MAZ-CENTRALUS,MEMBER
 35.183.12.252,65013,AWS-CA-CENTRAL-1,MEMBER
+34.229.124.130,65013,AWS-US-EAST-1,MEMBER
 3.14.252.232,65013,AWS-US-EAST-2,MEMBER
 3.121.201.31,65013,AWS-EU-CENTRAL-1,MEMBER
 
