--- a/genesisnodelist.config
+++ b/genesisnodelist.config
@@ -8,9 +8,11 @@
 #    format: IPaddress,Port#,geo,type
 #
 52.53.222.151,65013,AWS-US-WEST-1,GENESIS
-52.47.163.136,65013,AWS-EU-WEST-3,MEMBER
+52.47.163.136,65013,AWS-EU-WEST-3,GENESIS
 54.194.248.47,65013,AWS-EU-WEST-1,MEMBER
-18.181.19.149,65013,AWS-AP-NORTHEAST-1B,MEMBER
+3.8.160.148,65013,AWS-EU-WEST-2,MEMBER
+15.161.106.181,65013,AWS-EU-SOUTH-1,MEMBER
+18.181.19.149,65013,AWS-AP-NORTHEAST-1B,GENESIS
 
 54.79.238.234,65013,AWS-AP-SOUTHEAST-2,MEMBER
 54.169.196.101,65013,AWS-AP-SOUTHEAST-1,MEMBER
@@ -36,11 +38,13 @@
 51.11.244.133,65013,MAZ-FRANCECENTRAL,MEMBER
 51.103.143.0,65013,MAZ-SWITZERLANDNORTH,MEMBER
 40.123.249.176,65013,MAZ-SOUTHAFRICANORTH,MEMBER
+13.244.171.67,65013,AWS-AF-SOUTH-1,MEMBER
 40.113.204.173,65013,MAZ-CENTRALUS,MEMBER
 35.183.12.252,65013,AWS-CA-CENTRAL-1,MEMBER
 34.229.124.130,65013,AWS-US-EAST-1,MEMBER
 3.14.252.232,65013,AWS-US-EAST-2,MEMBER
 3.121.201.31,65013,AWS-EU-CENTRAL-1,MEMBER
+15.161.106.181,65013,AWS-EU-SOUTH-1,MEMBER
 
 13.75.168.56,65013,MAZ-AUSTRALIAEAST-00,MEMBER
 52.189.219.2,65013,MAZ-AUSTRALIASOUTHEAST-00,MEMBER
