--- a/publicrelays.config
+++ b/publicrelays.config
@@ -33,14 +33,18 @@ EQIX-SL-C2-MEDIUM-X86-01:145.40.87.69
 #EQIX-SV-C3-SMALL-X86-01:
 #EQIX-SY-C3-SMALL-X86-01:
 # Azure AP+ME
-MAZ-EASTASIA:104.208.71.169
-MAZ-JAPANEAST:20.89.93.166
-MAZ-CENTRALINDIA:20.219.26.249
-MAZ-KOREASOUTH:52.147.126.209
-MAZ-SOUTHEASTASIA:20.212.207.15
-MAZ-UAENORTH:20.216.45.111
+MAZ-EASTASIA:104.208.111.252
+MAZ-JAPANEAST:40.115.198.64
+MAZ-CENTRALINDIA:104.211.227.23
+MAZ-KOREASOUTH:52.231.136.35
+MAZ-KOREACENTRAL:20.249.1.178
+MAZ-SOUTHEASTASIA:20.212.151.88
+MAZ-UAENORTH:20.233.24.237
 MAZ-AUSTRALIASOUTHEAST:13.70.133.210
-MAZ-AUSTRALIAEAST:20.213.163.62
+MAZ-AUSTRALIAEAST:20.213.164.13
+MAZ-GERMANYWESTCENTRAL:20.113.169.41
 #
 MAZ-CANADACENTRAL:20.151.128.136
-
+MAZ-EASTUS:20.25.58.171
+MAZ-NORTHCENTRALUS:52.159.114.58
+MAZ-SOUTHCENTRALUS:20.225.171.252
