--- a/publicrelays.config
+++ b/publicrelays.config
@@ -48,3 +48,8 @@ MAZ-CANADACENTRAL:20.151.128.136
 MAZ-EASTUS:20.25.58.171
 MAZ-NORTHCENTRALUS:52.159.114.58
 MAZ-SOUTHCENTRALUS:20.225.171.252
+MAZ-WESTUS:20.253.151.67
+MAZ-WESTEUROPE:52.174.128.214
+MAZ-SWITZERLANDNORTH:20.203.248.15
+MAZ-NORTHEUROPE:20.234.112.174
+MAZ-SWITZERLANDNORTH:52.159.114.58
